--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -123,11 +123,7 @@ try {
     <p class="my-0 text-white">
       <!-- text-muted -->
       <small>
-        <?php if ($footerContent = $this->themeSetting('footer')): ?>
-        <?php echo $footerContent; ?>
-        <?php else: ?>
-        <?php echo $this->translate('Powered by Omeka S'); ?>
-        <?php endif; ?>
+        <?php echo $this->partial('common/footer'); ?>
       </small>
     </p>
   </div>
