update footer theme.

--- a/view/common/footer.phtml
+++ b/view/common/footer.phtml
@@ -1,4 +1,5 @@
-<div class="four-1">
+<div class="row">
+<div class="col">
 	<h3>GDAO</h3>
 	<a href="/"><img src="/themes/gdao-s-theme/asset/img/logo-gdao-gray.png"></a>
   <ul>
@@ -6,7 +7,7 @@
 	  	<li><a href="/credits">Credits</a></li>
 	</ul>
 </div>
-<div class="four-2">
+<div class="col">
 	<h3>UCSC</h3>
 	<a href="http://www.ucsc.edu/"><img src="/themes/gdao-s-theme/asset/img/logo-ucsc-gray.png"></a>
 	<ul>
@@ -15,7 +16,7 @@
 		<li><a href="http://library.ucsc.edu/grateful-dead-archive/donate">Support the Grateful Dead Archive</a></li>
 	</ul>
 </div>
-<div class="four-3">
+<div class="col">
 	<h3>Partners</h3>
 	<a href="http://www.cdlib.org/"><img src="/themes/gdao-s-theme/asset/img/logo-cdl-gray.png"></a>
 	<a href="http://designbycosmic.com/"><img src="/themes/gdao-s-theme/asset/img/logo-cosmic-gray.png"></a>
@@ -23,7 +24,7 @@
 	<a href="http://archive.org/index.php" class="logo"><img src="/themes/gdao-s-theme/asset/img/logo-ia-gray.png"></a>
 	<a href="http://omeka.org/" class="logo"><img src="/themes/gdao-s-theme/asset/img/logo-omeka-gray.png"></a>
 </div>
-<div class="four-4">
+<div class="col">
 	<h3>Connect</h3>
 	<ul>
 		<li><a href="mailto:grateful@ucsc.edu">grateful@ucsc.edu</a></li>
