--- a/view/omeka/site/page/show.phtml
+++ b/view/omeka/site/page/show.phtml
@@ -5,7 +5,7 @@ $this->pageTitle($page->title(), 2);
 $showPagePagination = $this->siteSetting('show_page_pagination', true);
 ?>
 
-<div class="container mt-4 mb-5">
+<div class="container py-4">
 
     <?php
 $nav = $site->publicNav();
