--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -6,7 +6,7 @@ $this->headMeta()->setCharset('utf-8');
 $this->headMeta()->appendName('viewport', 'width=device-width, initial-scale=1');
 $this->headTitle($siteTitle)->setSeparator(' · ');
 $this->headTitle()->append($this->setting('installation_title', 'Omeka S'));
-//$this->headLink()->prependStylesheet($this->assetUrl('css/style.css'));
+$this->headLink()->prependStylesheet($this->assetUrl('css/style.css'));
 //$this->headLink()->prependStylesheet($this->assetUrl('css/iconfonts.css', 'Omeka'));
 //$this->headLink()->prependStylesheet('//fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700italic,700');
 $this->headLink()->prependStylesheet($this->assetUrl('css/bootstrap.min.css'));
@@ -118,14 +118,9 @@ try {
 
 
 <!-- Footer -->
-<footer class="py-5 navbar-dark bg-dark text-center">
+<footer class="px-5 py-5">
   <div class="container-fluid">
-    <p class="my-0 text-white">
-      <!-- text-muted -->
-      <small>
-        <?php echo $this->partial('common/footer'); ?>
-      </small>
-    </p>
+    <?php echo $this->partial('common/footer'); ?>
   </div>
 </footer>
 
