--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,20 +1,111 @@
-/* GDAO S Theme CSS Rules */
+/*
+ *
+ * GDAO S Theme styling
+ *
+ */
+
+/*
+ * Typography
+ *
+ */
+body {
+	font-family: "Lucida Grande", "Lucida Sans Unicode", "Gill Sans", sans-serif;
+	font-size: 14px;
+	color: #858585;
+}
+nav.navbar {
+	font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Gill Sans", sans-serif;
+	font-size: 16px;
+	font-weight: lighter;
+}
+
+/*
+ * Logo
+ *
+ */
+a.navbar-brand {
+	min-width: 157px; /* prevent flexbox from resizing */
+	max-width: 157px;
+	height: 159px;
+	background-image: url(../img/logo-gdao-circ.png);
+	text-indent: -9999px;
+	z-index: 9;
+}
+@media (min-width: 576px) {
+	a.navbar-brand {
+		background-image: url(../img/logo-gdao.png);
+		height: 176px;
+		position: absolute;
+		top: 18px;
+	}
+}
 
 
-/* Layout styles */
+/*
+ * Header
+ *
+ */
+nav.navbar {
+	background-color: #414142;
+}
+nav.navbar-gdao {
+	border-bottom: 1px solid #000;
+}
+#navbar-primary a:link,
+#navbar-primary a:visited {
+	color: #c2c2c2;
+}
+#navbar-primary a:hover,
+#navbar-primary a:active {
+	color: #fff;
+}
+#navbar-secondary a {
+	color: #fff;
+}
+#navbar-secondary a:hover {
+	background-color: #4e4e4f;
+}
+#navbar-secondary ul {
+	max-height: 123px;
+}
+.navbar-toggler {
+	border: 1px solid #ccc;
+	border-radius: 5px;
+}
+.navbar-toggler-icon {
+	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+/* Non-mobile screens */
+@media (min-width: 576px) {
+	#navbar-primary {
+		background-image: url(../img/bg-banner.png);
+		background-repeat: repeat-x;
+		background-position: top;
+	}
+	#navbar-secondary {
+		height: 123px;
+		margin-left: 157px; /* space for logo */
+	}
+}
+
+/*
+ * Layout
+ *
+ */
 
 #content {
 	background-image: url(../img/bg-main.png);
 	background-repeat: repeat;
 }
 
-/* Footer styles */
+/*
+ * Footer
+ *
+ */
 
 footer {
 	background-image: url(../img/bg-footer.png);
 	background-repeat: repeat;
-	color: #6d6d6d;
-	line-height: 1.5em;
 }
 
 footer a {
@@ -23,7 +114,7 @@ footer a {
 	background-position: bottom;
 	background-repeat: repeat-x;
 	display: block;
-	padding: 12px 0px 6px 0px;
+	padding: 12px 0 6px;
 }
 
 footer a:hover {
@@ -31,18 +122,15 @@ footer a:hover {
 }
 
 footer h3 {
-	color: #868686;
-	font-weight: normal;
 	letter-spacing: .05em;
 	text-transform: uppercase;
 	padding: 6px;
 	border: 1px solid #535353;
 	font-size: 13px;
-	margin: 16px 0 6px 0;
+	margin: 16px 0 6px;
 }
 
 footer ul {
 	list-style: none;
-	margin: 0;
-	padding: 16px 0;
+	padding: 0;
 }
