--- a/view/common/foundation-navigation.phtml
+++ b/view/common/foundation-navigation.phtml
@@ -10,7 +10,7 @@ $layoutAttributes = [
 ]
 ?>
 
-<ul class="navbar-nav me-auto mb-2 mb-lg-0" <?php echo $layoutAttributes[$layout]; ?>>
+<ul class="navbar-nav mx-auto" <?php echo $layoutAttributes[$layout]; ?>>
     <?php foreach ($container as $page): ?>
         <?php if (!$this->navigation()->accept($page)) continue; ?>
         <?php /* @var $page Zend\Navigation\Page\Mvc */ ?>
@@ -19,7 +19,7 @@ $layoutAttributes = [
         <?php if (!$hasChildren || ($showChildren == 0)): ?>
             <li class="nav-item <?php if ($page->isActive()) echo 'active' ?>">
                 <a 
-                    class="nav-link" 
+                    class="nav-link mx-3"
                     href="<?php echo $page->getHref() ?>"
                     <?php if ($page->getTarget() != ""): ?>
                         target="<?php echo $page->getTarget(); ?>"
