--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -12,6 +12,7 @@ $this->headLink()->prependStylesheet($this->assetUrl('css/style.css'));
 $this->headLink()->prependStylesheet($this->assetUrl('css/bootstrap.min.css'));
 //$this->headLink()->prependStylesheet('https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css');
 $this->headLink()->prependStylesheet($this->assetUrl('fontawesome/css/all.min.css'));
+$this->headLink(['rel' => 'icon', 'href' => $this->assetUrl('img/favicon.gif')], 'PREPEND');
 $this->headScript()->prependFile($this->assetUrl('js/default.js'));
 $this->headScript()->prependFile("https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js");
 $this->headScript()->prependFile("https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js");
@@ -63,7 +64,8 @@ try {
 <!-- <a id="skipnav" href="#content"><?php echo $this->translate('Skip to main content'); ?></a>
 -->
 <?php echo $userBar; ?>
-<?php echo $this->partial('common/header-vertical'); ?>
+<?php echo $this->partial('common/header'); ?>
+
 
 <?php if ($isHomePage && $top_image): ?>
 <style>
