--- a/view/search/results-header.phtml
+++ b/view/search/results-header.phtml
@@ -16,7 +16,7 @@
             <?php endif; ?>
         </form>
     </div>
-    <div>
+    <div class="search-results-layout">
         <a class="search-view-type search-view-type-list" href="#">list</a>
         |
         <a class="search-view-type search-view-type-grid" href="#">grid</a>
