--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -195,6 +195,7 @@ aside.search-facets {
 aside.search-facets {
 	order: 1;
 	flex-basis: 30%;
+	min-width: 294px;
 	padding: 15px;
 	margin-left: 20px;
 }
