--- a/view/common/search-form.phtml
+++ b/view/common/search-form.phtml
@@ -1,16 +1,16 @@
 <?php
 $translate = $this->plugin('translate');
-$searchValue = $this->escapeHtml($this->params()->fromQuery('fulltext_search', ''));
+$searchValue = $this->params()->fromQuery("filters");
 ?>
 
 <form
-    action="<?php echo $this->escapeHtml($this->url('site/resource', ['controller' => 'item','action' => 'browse'], true)); ?>"
+    action="<?php echo $this->escapeHtml($this->url('search-page-1', [], true)); ?>"
     id="search-form" class="mb-0 input-group">
-    <input type="text" name="property[0][text]" class="form-control"
-        value="<?php echo $searchValue; ?>"
+    <input type="text" name="filters[queries][0][term]" class="form-control"
+        value="<?php echo $searchValue ? $searchValue['queries'][0]['term'] : ''; ?>"
         placeholder="<?php echo $translate('Search'); ?>">
-    <input type="hidden" name="property[0][joiner]" value="and" />
-    <input type="hidden" name="property[0][property]" value="" />
-    <input type="hidden" name="property[0][type]" value="in" />
+    <input type="hidden" name="filters[queries][0][field]" value="keyword" />
+    <input type="hidden" name="filters[queries][0][operator]" value="contains_any_word" />
+    <input type="hidden" name="filters[match]" value="all" />
     <button class="btn btn-primary" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
 </form>
