--- a/view/search/index/search.phtml
+++ b/view/search/index/search.phtml
@@ -47,7 +47,7 @@
 <div id="search-form-wrapper">
     <?php echo $this->searchForm(); ?>
 </div>
-<a href="#" id="search-form-show-link" style="display: none"><?php echo $this->translate('Edit this search'); ?></a>
+<a href="#" id="search-form-show-link" class="btn btn-secondary btn-sm" style="display: none"><?php echo $this->translate('Edit this search'); ?> <i class="fa-solid fa-chevron-down"></i></a>
 
 <?php if (isset($response)): ?>
     <div class="search-results-wrapper">
