--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -89,6 +89,11 @@ nav.navbar-gdao {
 .navbar-toggler-icon {
 	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
+#navbar-secondary .flex-sm-column {
+	position: relative;
+	top: 14px;
+	gap: 5px;
+}
 /* Non-mobile screens */
 @media (min-width: 576px) {
 	#navbar-primary {
@@ -125,7 +130,7 @@ footer {
 }
 
 footer a {
-	color: #878787;
+	color: #878787 !important;
 	background-image: url(../img/line-footer.png);
 	background-position: bottom;
 	background-repeat: repeat-x;
