show resource media

--- a/view/common/resource-page-block-layout/media-embeds.phtml
+++ b/view/common/resource-page-block-layout/media-embeds.phtml
@@ -1,7 +1,7 @@
 <?php
 $resourceMedia = $resource->media();
 ?>
-<?php if (false && $resourceMedia): ?>
+<?php if ($resourceMedia): ?>
 <div class="media-embeds">
     <?php foreach ($resourceMedia as $media): ?>
     <?php echo $media->render(); ?>
