clean up theme variables, add vars for our metadata presentation

--- a/view/common/foundation-navigation.phtml
+++ b/view/common/foundation-navigation.phtml
@@ -14,9 +14,8 @@ $layoutAttributes = [
     <?php foreach ($container as $page): ?>
         <?php if (!$this->navigation()->accept($page)) continue; ?>
         <?php /* @var $page Zend\Navigation\Page\Mvc */ ?>
-        <?php $hasChildren = $page->hasPages() ?>
-        <?php $showChildren = $this->themeSetting('nav_show_levels'); ?>
-        <?php if (!$hasChildren || ($showChildren == 0)): ?>
+        <?php $hasChildren = $page->hasPages() ?>\
+        <?php if (!$hasChildren): ?>
             <li class="nav-item <?php if ($page->isActive()) echo 'active' ?>">
                 <a 
                     class="nav-link mx-3"
