--- a/view/omeka/site/item-set/browse.phtml
+++ b/view/omeka/site/item-set/browse.phtml
@@ -8,7 +8,7 @@ $lang = $this->lang();
 $this->htmlElement('body')->appendAttribute('class', 'item-set resource browse');
 
 //リスト
-$bodyProperties = $this->themeSetting('body_property');
+$bodyProperties = '';
 
 $bodyHeadings = [];
 $rows = explode("\n", $bodyProperties);
