--- a/view/common/resource-values-vars.phtml
+++ b/view/common/resource-values-vars.phtml
@@ -5,6 +5,7 @@ $escape = $this->plugin('escapeHtml');
 $primaryValues = process_theme_values($this->themeSetting('primary_values'));
 $secondaryValues = process_theme_values($this->themeSetting('secondary_values'));
 $facetValues = process_theme_values($this->themeSetting('facet_values'));
+$facetValues = str_replace(':', '_', $facetValues);
 
 if ($this->status()->isSiteRequest()) {
     $labelInfo = $this->siteSetting('property_label_information');
