--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -331,3 +331,24 @@ body.show .row.main {
   margin-bottom: 22px;
   border-bottom: 1px solid #ddd;
 }
+body.show .oral-history {
+	background-color: #f8f8f8;
+  border: 1px solid #cbcbcb;
+  padding: 20px;
+}
+.oral-history dt {
+	color: #646464;
+	font-size: 17px;
+	font-weight: normal;
+}
+.oral-history dd {
+	font-size: 17px;
+	font-style: italic;
+	line-height: 1.6em;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	padding: 25px 30px 40px 75px;
+}
+.oral-history dd:first-line {
+	font-size: 20px;
+	font-weight: bold;
+}
